# cqlsh-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Criterion.toml  Dockerfile  Makefile  README.md  build.rs  codecov.yml  release-plz.toml  renovate.json
.claude/: memories.md  settings.json
.claude/hooks/: install-gh-cli.sh
.github/: copilot-instructions.md  labels.yml
.github/instructions/: memory.instructions.md
.github/scripts/: analyze-ci-failures.sh
.github/skills/conventional-commit/: SKILL.md
.github/skills/create-implementation-plan/: SKILL.md
.github/skills/development-process/: SKILL.md
.github/skills/remember/: SKILL.md
.github/skills/rust-clippy/: SKILL.md
.github/skills/rust-code-review/: SKILL.md
.github/skills/rust-error-handling/: SKILL.md
.github/skills/rust-performance/: SKILL.md
.github/skills/rust-testing/: SKILL.md
.github/skills/skill-creator/: SKILL.md
.github/workflows/: bench.yml  ci-failure-analysis.yml  ci.yml  docs.yml  labels.yml  progress.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-5-login-review.txt
.sisyphus/notepads/sp21a-uds-proxy/: learnings.md
.sisyphus/plans/: sp21a-uds-proxy.md
benches/: bench_completion.rs  bench_format.rs  bench_parser.rs  bench_startup.rs  completion.rs  format.rs  formatter.rs  main.rs  parser.rs  startup.rs
benchmarks/python_cqlsh/: .gitignore  README.md  pyproject.toml
benchmarks/python_cqlsh/benchmarks/: bench_cqlsh.py  conftest.py
dev/bench/: data.js
docs/: CASSANDRA_CQL_GRAMMAR.md  llms-full.txt  llms.txt  progress.json
docs/book/: book.toml
docs/book/src/: SUMMARY.md  cli-reference.md  copy-guide.md  divergences.md  getting-started.md  installation.md  introduction.md  migration.md  performance.md  troubleshooting.md
docs/book/src/commands/: README.md  capture.md  clear.md  consistency.md  copy-from.md  copy-to.md  debug.md  describe.md  exit.md  expand.md  help.md  login.md  paging.md  serial-consistency.md  show.md  source.md  tracing.md  unicode.md  use.md
docs/book/src/configuration/: authentication.md  connection.md  copy.md  cql.md  csv.md  index.md  ssl.md  tracing.md  ui.md
docs/plans/: 01-cli-and-config.md  02-driver-and-connection.md  03-repl-and-editing.md  04-statement-parser.md  05-tab-completion.md  06-output-formatting.md  07-builtin-commands.md  08-copy-to-from.md  09-cql-type-system.md  10-testing-strategy.md  11-benchmarking.md  12-cross-platform-release.md  13-skills-development.md  14-documentation.md  15-ai-ci-failure-summaries.md  16-upstream-pr-review.md  17-ai-assistant-help.md  18-cql-lexer.md  19-test-gap-analysis.md  20-grammar-aware-completion.md  21-streaming-pager.md  21-unix-domain-socket-support.md  21a-unix-domain-socket-short-range.md  21b-unix-domain-socket-long-range.md  high-level-design.md  phase4-copy-and-advanced.md  phase4-copy-test-plan.md  phase4-manual-test-plan.md  review-and-remaining-tasks.md
homebrew/: cqlsh-rs.rb
scripts/: bench_comparison.sh  format_bench_summary.py  generate_progress_svg.py
src/: cli.rs  colorizer.rs  completer.rs  config.rs  copy.rs  cql_lexer.rs  describe.rs  error.rs  executor.rs  formatter.rs  lib.rs  main.rs  pager.rs  parser.rs  repl.rs  runner.rs  schema_cache.rs  session.rs  shell_completions.rs
src/driver/: mod.rs  proxy_address_translator.rs  scylla_driver.rs  types.rs  uds_proxy.rs
tests/: cli_tests.rs  cqlshrc_tests.rs  test_categories.toml
tests/integration/: auth_tests.rs  copy_from_tests.rs  copy_tests.rs  core_tests.rs  describe_tests.rs  dtest_copy_tests.rs  dtest_cqlsh_tests.rs  escape_tests.rs  helpers.rs  login_tests.rs  main.rs  output_tests.rs  proxy_tests.rs  schema_agreement_tests.rs  ssl_tests.rs  uds_tests.rs  unicode_tests.rs
tests/snapshots/: output_snapshots__snapshot_error_fallback.snap  output_snapshots__snapshot_error_invalid_request.snap  output_snapshots__snapshot_error_syntax_exception.snap  output_snapshots__snapshot_error_unauthorized.snap  output_snapshots__snapshot_expanded_mixed_types.snap  output_snapshots__snapshot_tabular_10_rows_mixed_types.snap  output_snapshots__snapshot_tabular_50_rows.snap  output_snapshots__snapshot_tabular_5_rows.snap
