[package]
name = "cqlsh-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust re-implementation of the Apache Cassandra cqlsh shell"
license = "MIT"
repository = "https://github.com/fruch/cqlsh-rs"
keywords = ["cassandra", "cql", "cqlsh", "scylladb", "database"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "cqlsh-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
configparser = "3"
anyhow = "1"
thiserror = "2"
dirs = "6"
scylla = { version = "1", features = ["rustls-023", "chrono-04", "num-bigint-04", "bigdecimal-04"] }
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
rustls-pemfile = "2"
uuid = { version = "1", features = ["v4"] }
bigdecimal = "0.4"
num-bigint = "0.4"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"
rustyline = { version = "15", features = ["derive"] }
comfy-table = "7"
crossterm = "0.28"
terminal_size = "0.4"

[lib]
name = "cqlsh_rs"
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "startup"
harness = false
